--- a/pages/index.css
+++ b/pages/index.css
@@ -2,8 +2,27 @@
 @import url('../fonts/fonts.css');
 @import url('../blocks/page/page.css');
 @import url('../blocks/page/__container/page__container.css');
+@import url('../blocks/popup/popup.css');
+@import url('../blocks/popup/__container/popup__container.css');
+@import url('../blocks/popup/__title/popup__title.css');
+@import url('../blocks/popup/__form/popup__form.css');
+@import url('../blocks/popup/__name/popup__name.css');
+@import url('../blocks/popup/__job/popup__job.css');
+@import url('../blocks/popup/__button/popup__button.css');
+@import url('../blocks/popup-toggle/popup-toggle.css');
+@import url('../blocks/popup/__close/popup__close.css');
+
 @import url('../blocks/header/header.css');
 @import url('../blocks/logo/logo.css');
+@import url('../blocks/content/content.css');
+@import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__avatar/profile__avatar.css');
+@import url('../blocks/profile/__info/profile__info.css');
+@import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__title/profile__title.css');
+@import url('../blocks/profile/__subtitle/profile__subtitle.css');
+@import url('../blocks/edit-button/edit-button.css');
+@import url('../blocks/add-button/add-button.css');
 
 
 
