--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,7 +1,21 @@
 .popup__button {
-  background-color: blue;
+  width: 358px;
+  height: 50px;
+  align-self: center;
   color: white;
   margin-top: 48px;
   background-color: #000000;
   border-radius: 2px;
+  border: none;
+  cursor: pointer;
+  padding-top: 14px;
+  padding-bottom: 18px;
+}
+
+.popup__button:hover {
+  opacity: .8;
+}
+
+.popup__button:focus {
+  opacity: .8;
 }
