--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,8 +1,9 @@
 .popup__container {
   max-width: 430px;
-  width: 100%;
+
   position: relative;
   background-color: white;
   border-radius: 10px;
   padding: 34px 36px 37px;
+  filter: blur(0);
 }
