--- a/blocks/popup/__job/popup__job.css
+++ b/blocks/popup/__job/popup__job.css
@@ -1,4 +1,11 @@
 .popup__job {
+  padding: 0 0 13px 0;
   border-style: none;
+  outline: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
+}
+
+.popup__job:focus {
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, .8);
 }
