--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -1,6 +1,12 @@
 .popup__name {
-  background-color: white;
+  padding: 0 0 13px 0;
   margin-bottom: 30px;
-  border-style: none;
+  border: none;
+  outline: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
+}
+
+.popup__name:focus {
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, .8);
 }
