--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -8,15 +8,15 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('Inter-Bold.woff') format('woff'),
-   url('Inter-Bold.woff2') format('woff2');
+  src: url('Inter-Medium.woff') format('woff'),
+   url('Inter-Medium.woff2') format('woff2');
   font-style: normal;
-  font-weight: bold;
+  font-weight: 500;
 }
 
 @font-face {
   font-family: 'Inter';
-  src: local('Inter-Black.woff') format('woff'),
+  src: url('Inter-Black.woff') format('woff'),
    url('Inter-Black.woff2') format('woff2');
   font-style: normal;
   font-weight: 900;
