--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,7 +1,5 @@
-.profile__subtitle {
-  color: white;
-  padding: 0;
-  margin: 0;
+.footer__copyright {
+  color: #545454;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
