--- a/blocks/edit-button/edit-button.css
+++ b/blocks/edit-button/edit-button.css
@@ -1,11 +1,17 @@
 .edit-button {
   position: absolute;
-  top: 6px;
-  right: -35px;
-
+  top: 10px;
+  right: -42px;
+  background-image: url(../../images/edit-button.svg);
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-position: 50%;
+  width: 24px;
+  height: 24px;
+  border: 1px solid #FFFFFF;
 }
 
 .edit-button:hover {
-  opacity: .7;
+  opacity: .6;
   cursor: pointer;
 }
