--- a/blocks/element/__subtitle/element__subtitle.css
+++ b/blocks/element/__subtitle/element__subtitle.css
@@ -1,6 +1,9 @@
 .element__subtitle {
-  max-width: 200px;
-  margin: 30px 0 31px 21px;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+  margin: 25px 0 31px 21px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
