--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,5 +4,6 @@
   display: grid;
   column-gap: 17px;
   row-gap: 20px;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, 282px);
+  justify-content: center;
 }
