--- a/blocks/popup/__job/popup__job.css
+++ b/blocks/popup/__job/popup__job.css
@@ -3,6 +3,10 @@
   border-style: none;
   outline: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
 }
 
 .popup__job:focus {
