--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,5 +1,10 @@
 .profile__title {
+  display: inline-block;
   color: white;
   padding: 0;
   margin: 0;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 42px;
+  line-height: 114%;
 }
