--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,9 @@
 @import url('../blocks/element/__subtitle/element__subtitle.css');
 @import url('../blocks/element/__like/element__like.css');
 
+@import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__copyright/footer__copyright.css');
+
 
 
 
