--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,6 @@
 .popup {
-  display: none;
+  visibility: hidden;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
