--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -4,9 +4,8 @@
   align-self: center;
   color: white;
   margin-top: 48px;
-  background-color: #000000;
-  border-radius: 2px;
   border: none;
+  border-radius: 2px;
   cursor: pointer;
   padding-top: 14px;
   padding-bottom: 18px;
@@ -15,12 +14,5 @@
   font-size: 18px;
   line-height: 22px;
   text-align: center;
-}
-
-.popup__button:hover {
-  opacity: .8;
-}
-
-.popup__button:focus {
-  opacity: .8;
+  outline: 0;
 }
