--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -16,3 +16,11 @@
   opacity: .7;
   cursor: pointer;
 }
+
+@media screen and (max-width: 660px) {
+  .add-button {
+    margin-left: 0;
+    margin-top: 36px;
+    width: 100%;
+  }
+}
