--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -3,4 +3,17 @@
   max-height: 120px;
   border-radius: 50%;
   margin-right: 30px;
+  justify-self: center;
+}
+
+@media screen and (max-width: 896px) {
+  .profile__avatar {
+    margin-left: 30px;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .profile__avatar {
+    margin-right: 0;
+  }
 }
