--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,9 +5,10 @@
 }
 
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 660px) {
   .profile {
     max-width: 282px;
     flex-direction: column;
+    align-items: center;
   }
 }
