--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -3,3 +3,12 @@
   height: 33px;
   margin-bottom: 41px;
 }
+
+@media screen and (max-width: 320px) {
+  .logo {
+    width: 101px;
+    height: 24px;
+    padding-left: 27px;
+    margin-bottom: 31px;
+  }
+}
