--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,12 +1,19 @@
 .popup__close {
+  width: 40px;
   position: absolute;
-  top: -30px;
-  right: -30px;
-
+  top: -40px;
+  right: -40px;
   cursor: pointer;
 }
 
 .popup__close:hover {
   opacity: .7;
+}
+
+@media screen and (max-width: 500px) {
+  .popup__close {
+    width: 26px;
+    right: 0;
+  }
 }
 
