--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,9 +1,15 @@
 .popup__container {
   max-width: 430px;
-
   position: relative;
   background-color: white;
   border-radius: 10px;
   padding: 34px 36px 37px;
-  filter: blur(0);
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (max-width: 425px) {
+  .popup__container {
+    max-width: 282px;
+    padding: 25px 22px 25px;
+  }
 }
