--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -6,14 +6,10 @@
   justify-self: center;
 }
 
-@media screen and (max-width: 896px) {
+@media screen and (max-width: 890px) {
   .profile__avatar {
-    margin-left: 30px;
+    margin-right: 0;
+    margin-bottom: 22px;
   }
 }
 
-@media screen and (max-width: 660px) {
-  .profile__avatar {
-    margin-right: 0;
-  }
-}
