--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -8,3 +8,11 @@
   font-size: 42px;
   line-height: 114%;
 }
+
+@media screen and (max-width: 890px) {
+  .profile__title {
+    margin-bottom: 14px;
+    font-size: 27px;
+    line-height: 33px;
+  }
+}
