--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,3 +2,10 @@
   max-width: 880px;
   margin: 67px auto 60px;
 }
+
+@media screen and (max-width: 890px) {
+  .footer {
+    max-width: 90%;
+    margin: 48px auto 36px;
+  }
+}
