--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -15,3 +15,9 @@
 .element__like:hover {
   opacity: .5;
 }
+
+@media screen and (max-width: 768px) {
+  .element__like:hover {
+    opacity: 1;
+  }
+}
