--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -15,6 +15,7 @@
   line-height: 22px;
   text-align: center;
   outline: 0;
+  background-color: #ebebeb;
 }
 
 @media screen and (max-width: 425px) {
