--- a/blocks/add-button/add-button.css
+++ b/blocks/add-button/add-button.css
@@ -12,21 +12,27 @@
   border: 2px solid #FFFFFF;
 }
 
-.add-button:hover {
-  opacity: .7;
-  cursor: pointer;
+@media (hover: hover) {
+  .add-button:hover {
+    opacity: .7;
+    cursor: pointer;
+  }
 }
+@media (hover: none) {
+}
+
 
 @media screen and (max-width: 890px) {
   .add-button {
     margin-left: 0;
     margin-top: 36px;
-    width: 85%;
+    max-width: 580px;
+    width: 100%;
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 645px) {
   .add-button {
-    width: 90%;
+    max-width: 282px;
   }
 }
