--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -10,14 +10,16 @@
   border: none;
   margin-right: 22px;
   align-self: center;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.element__like:hover {
-  opacity: .5;
-}
-
-@media screen and (max-width: 768px) {
+@media (hover: hover) {
   .element__like:hover {
-    opacity: 1;
+    opacity: .5;
+  }
+}
+@media (hover: none) {
+  .element__like:target {
+    opacity: .5;
   }
 }
