--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -1,7 +1,3 @@
-/* h1, h2, h3, div, img, p, section, span, ul, li, a, header, footer {
-  border: 1px solid red;
-} */
-
 .page__container {
   max-width: 1280px;
   margin: 0 auto;
@@ -9,6 +5,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 @media screen and (max-width: 890px) {
