--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -7,6 +7,10 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 114%;
+  max-width: 320px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 890px) {
@@ -14,5 +18,18 @@
     margin-bottom: 14px;
     font-size: 27px;
     line-height: 33px;
+
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .profile__title {
+    max-width: 282px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .profile__title {
+    max-width: 220px;
   }
 }
