--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,5 @@
-.add-button {
-  background-image: url(../../images/add-button.svg);
+.profile__add-button {
+  background-image: url(../../../images/add-button.svg);
   background-repeat: no-repeat;
   background-color: transparent;
   background-position: 50%;
@@ -13,20 +13,20 @@
 }
 
 @media (hover: hover) {
-  .add-button:hover {
+  .profile__add-button:hover {
     opacity: .7;
     cursor: pointer;
   }
 }
 @media (hover: none) {
-  .add-button:active {
+  .profile__add-button:active {
     opacity: .7;
   }
 }
 
 
 @media screen and (max-width: 890px) {
-  .add-button {
+  .profile__add-button {
     margin-left: 0;
     margin-top: 36px;
     max-width: 580px;
@@ -35,7 +35,7 @@
 }
 
 @media screen and (max-width: 645px) {
-  .add-button {
+  .profile__add-button {
     max-width: 282px;
   }
 }
