--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,8 +1,8 @@
-.edit-button {
+.profile__edit-button {
   position: absolute;
   top: 15px;
   right: -42px;
-  background-image: url(../../images/edit-button.svg);
+  background-image: url(../../../images/edit-button.svg);
   background-repeat: no-repeat;
   background-color: transparent;
   background-position: 50%;
@@ -13,20 +13,20 @@
 }
 
 @media (hover: hover) {
-  .edit-button:hover {
+  .profile__edit-button:hover {
     opacity: .6;
     cursor: pointer;
   }
 }
 @media (hover: none) {
-  .edit-button:active {
+  .profile__edit-button:active {
     opacity: .6;
   }
 }
 
 
 @media screen and (max-width: 890px) {
-  .edit-button {
+  .profile__edit-button {
     top: 9px;
     width: 18px;
     height: 18px;
