--- a/blocks/popup/__job/popup__job.css
+++ b/blocks/popup/__job/popup__job.css
@@ -3,6 +3,7 @@
   border-style: none;
   outline: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
+  font-family: 'Inter';
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
