--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -4,6 +4,7 @@
   border: none;
   outline: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
+  font-family: 'Inter';
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
