--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -2,6 +2,7 @@
   color: white;
   padding: 0;
   margin: 0;
+  font-family: 'Inter';
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
