--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -3,6 +3,7 @@
   color: white;
   padding: 0;
   margin: 0;
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
