--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,23 +1,23 @@
 @font-face {
   font-family: 'Inter';
-  src: local('Inter-Regular.woff') format('woff'),
-        local('Inter-Regular.woff2') format('woff2');
-  font-style: normal;
-  font-weight: normal;
+  src: url('Inter-Regular.woff') format('woff'),
+       url('Inter-Regular.woff2') format('woff2');
+       font-style: normal;
+       font-weight: normal;
 }
 
 @font-face {
   font-family: 'Inter';
-  src: local('Inter-Medium.woff') format('woff'),
-       local('Inter-Medium.woff2') format('woff2');
-  font-style: normal;
-  font-weight: 500;
+  src: url('Inter-Medium.woff') format('woff'),
+       url('Inter-Medium.woff2') format('woff2');
+       font-style: normal;
+       font-weight: 500;
 }
 
 @font-face {
   font-family: 'Inter';
   src: local('Inter-Black.woff') format('woff'),
-       local('Inter-Black.woff2') format('woff2');
-  font-style: normal;
-  font-weight: 900;
+       url('Inter-Black.woff2') format('woff2');
+       font-style: normal;
+       font-weight: 900;
 }
