сделать шрифты полностью

--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,4 +1,10 @@
 .popup__form {
+  font-family: 'Inter';
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
   display: flex;
   flex-direction: column;
 }
