--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -2,32 +2,19 @@
   color: white;
   padding: 0;
   margin: 0;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
-  max-width: 320px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  grid-column: -3/-1;
 }
 
 @media screen and (max-width: 890px) {
   .profile__subtitle {
     font-size: 14px;
     line-height: 17px;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .profile__subtitle {
-    max-width: 282px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .profile__subtitle {
-    max-width: 220px;
   }
 }
