--- a/blocks/page/__container/page__container.css
+++ b/blocks/page/__container/page__container.css
@@ -1,7 +1,7 @@
 .page__container {
   max-width: 1280px;
   margin: 0 auto;
-  font-family: "Inter", 'Helvetica Neue', 'Arial', sans-serif;
+  font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
