--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,5 +1,12 @@
 .popup__close {
+  background-image: url(../../../images/close-button.svg);
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-position: 50%;
+  outline: 0;
+  border: none;
   width: 40px;
+  height: 40px;
   position: absolute;
   top: -40px;
   right: -40px;
@@ -7,12 +14,13 @@
 }
 
 .popup__close:hover {
-  opacity: .7;
+  opacity: .6;
 }
 
 @media screen and (max-width: 500px) {
   .popup__close {
     width: 26px;
+    height: 26px;
     right: 0;
   }
 }
