--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,15 +1,25 @@
 .popup__container {
-  max-width: 430px;
   position: relative;
+  margin: auto;
   background-color: white;
   border-radius: 10px;
   padding: 34px 36px 37px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  width: 74%;
+  max-width: 430px;
 }
+
+@media screen and (max-width: 545px) {
+  .popup__container {
+    padding: 25px 22px 25px;
+    max-width: 320px;
+  }
+}
+
 
 @media screen and (max-width: 425px) {
   .popup__container {
-    max-width: 282px;
     padding: 25px 22px 25px;
+    max-width: 282px;
   }
 }
