--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,5 @@
 .popup {
-  visibility: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: none;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -11,5 +7,4 @@
   left: 0;
   background-color: rgba(0, 0, 0, .5);
   z-index: 999;
-  opacity: 0;
 }
