--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,4 @@
 .profile__edit-button {
-  position: absolute;
-  top: 15px;
-  right: -42px;
   background-image: url(../../../images/edit-button.svg);
   background-repeat: no-repeat;
   background-color: transparent;
@@ -10,6 +7,9 @@
   height: 24px;
   outline: 0;
   border: 1px solid #FFFFFF;
+  grid-column: 2/3;
+  align-self: center;
+  margin-top: 7px;
 }
 
 @media (hover: hover) {
@@ -24,12 +24,10 @@
   }
 }
 
-
 @media screen and (max-width: 890px) {
   .profile__edit-button {
-    top: 9px;
+    margin-top: 3px;
     width: 18px;
     height: 18px;
-    right: -30px;
   }
 }
