--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,36 +1,21 @@
 .profile__title {
-  display: inline-block;
   color: white;
   padding: 0;
   margin: 0;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 114%;
-  max-width: 320px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  grid-column: 1/2;
 }
 
 @media screen and (max-width: 890px) {
   .profile__title {
-    margin-bottom: 14px;
     font-size: 27px;
     line-height: 33px;
-
   }
 }
 
-@media screen and (max-width: 650px) {
-  .profile__title {
-    max-width: 282px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .profile__title {
-    max-width: 220px;
-  }
-}
