--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -5,14 +5,15 @@
   border-radius: 10px;
   padding: 34px 36px 37px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-  width: 74%;
+  width: 100%;
   max-width: 430px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 545px) {
   .popup__container {
     padding: 25px 22px 25px;
-    max-width: 320px;
+    max-width: 282px;
   }
 }
 
@@ -20,6 +21,5 @@
 @media screen and (max-width: 425px) {
   .popup__container {
     padding: 25px 22px 25px;
-    max-width: 282px;
   }
 }
