--- a/blocks/photo/__subtitle/photo__subtitle.css
+++ b/blocks/photo/__subtitle/photo__subtitle.css
@@ -1,3 +1,8 @@
 .photo__subtitle {
-color: white;
+  margin-top: 10px;
+  color: white;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
 }
