--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,6 +7,8 @@
 @import url('../blocks/content/content.css');
 @import url('../blocks/profile/profile.css');
 @import url('../blocks/profile/__avatar/profile__avatar.css');
+@import url('../blocks/profile/__avatar-container/profile__avatar-container.css');
+@import url('../blocks/profile/__avatar-change/profile__avatar-change.css');
 @import url('../blocks/profile/__info/profile__info.css');
 @import url('../blocks/profile/__title/profile__title.css');
 @import url('../blocks/profile/__subtitle/profile__subtitle.css');
@@ -20,6 +22,8 @@
 @import url('../blocks/element/__footer/element__footer.css');
 @import url('../blocks/element/__subtitle/element__subtitle.css');
 @import url('../blocks/element/__like/element__like.css');
+@import url('../blocks/element/__likes-container/element__likes-container.css');
+@import url('../blocks/element/__count-likes/element__count-likes.css');
 @import url('../blocks/element/__like/_active/element__like_active.css');
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
