--- a/src/blocks/profile/__avatar-change/profile__avatar-change.css
+++ b/src/blocks/profile/__avatar-change/profile__avatar-change.css
@@ -1,21 +1,34 @@
 .profile__avatar-change {
-  background-image: url(../../../images/edit-profile.svg);
-  background-repeat: no-repeat;
-  background-color: transparent;
-  background-position: 50%;
-  width: 26px;
-  height: 26px;
+  box-sizing: border-box;
+  padding: 0;
   outline: 0;
   border: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  transition: .2s ease;
-}
-
-.profile__avatar-change:hover {
-  opacity: 1;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background: transparent;
+  position: relative;
+  overflow: hidden;
   cursor: pointer;
 }
+
+.profile__avatar-change::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0;
+  transition: opacity .3s ease;
+}
+
+.profile__avatar-change:hover::before {
+  opacity: .8;
+  background-image: url(../../../images/edit-profile.svg);
+  background-size: 26px;
+  background-position: 50%;
+  background-repeat: no-repeat;
+}
+
