--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,7 +1,7 @@
 .profile__avatar {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
